[fix] update order form structure for conditional visibility, enhance JavaScript logic for delivery item handling, and improve CSS styles for form display

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1674,6 +1674,7 @@
 .cartTable__order .orderfast__block--coupon {display: none;}
 .cartTable__order {margin-top: 32px;}
 .orderfast__form {display: flex;flex-direction: column;gap: 32px;}
+.is-started .orderfast__form {display: flex;}
 .orderfast__block {padding: 16px;border: 1px solid var(--color-border-secondary);border-radius: var(--border-radius);}
 .orderfast__block:last-of-type {margin-bottom: 0;}
 .orderfast__block .form__fields + .form__fields {margin-top: 20px;}
